--- a/storyCreator/test.html
+++ b/storyCreator/test.html
@@ -24,13 +24,11 @@
 		</div>
 
 		<div class="VEContainer">
-		
+			<div id="container">
 				<canvas id="VECanvas"></canvas>
-			
+			</div>
 		</div>
-		
 
-	
 		
 <script>
 	myCanvas.width = (window.innerWidth / 1.8);
