--- a/storyCreator/Visual Editor/eli_dynamiccode.html
+++ b/storyCreator/Visual Editor/eli_dynamiccode.html
@@ -11,9 +11,7 @@
 </head>
 <body>
  
-  <div id="container">
-		<canvas id="VECanvas" width = 1000; height = 1000; style=" border:solid;"></canvas>
-  </div>
+  <div id="container"></div>
   <script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.7.2.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script defer>
