--- a/storyCreator/test.html
+++ b/storyCreator/test.html
@@ -13,14 +13,75 @@
 	<script src = 'object_creator/jfile.js' type = 'text/javascript' ></script>
 	<script src='Animation/animationBlocks.js' type = 'text/javascript' ></script>
 
+	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+	<script src="gui.js"> </script>
+
 </head>
 <body>
-		<div class="animationContainer">
+		<div class="animationContainer" id="droppable">
 			<canvas id="myCanvas" width="800"height="400"></canvas>
 		</div>
 		
 		<div class="objectContainer">
-			<canvas id="objectCanvas"></canvas>
+			  	<canvas id="objectCanvas"> </canvas>
+
+				<div id="tabs">
+  					<ul>
+    					<li><a href="#tabs-1">Objects</a></li>
+    					<li><a href="#tabs-2">Methods</a></li>
+  					</ul>
+  				<div id="tabs-1">
+  					<script defer="defer">
+  					var stage = new Kinetic.Stage({
+			        container: 'tabs-1',
+			        width: 578,
+			        height: 200
+			      });
+
+			      var layer = new Kinetic.Layer();
+			      var imageObj = new Image();
+					imageObj.onload = function() {
+					  var image = new Kinetic.Image({
+					    x: 200,
+					    y: 50,
+					    image: imageObj,
+					    width: 100,
+					    height: 100
+					  });
+					};
+					imageObj.src = 'kitten.png';
+
+			      var rect = new Kinetic.Rect({
+			        x: 239,
+			        y: 75,
+			        width: 100,
+			        height: 50,
+			        fill: 'green',
+			        stroke: 'black',
+			        strokeWidth: 4
+			      });
+
+			      var group = new Kinetic.Group({
+			      	draggable: true,
+			      	listening: true,
+			      	name: "box"
+			      });
+
+			      // add the shape to the layer
+			      group.add(imageObj);
+			      group.add(rect);
+			      layer.add(group);
+
+			      // add the layer to the stage
+			      stage.add(layer);
+  			</script>
+  		<div id="tabs-2">
+    		<p>Methods</p>
+  		</div>
+
+  	</div>
+
+  	</div>
 		</div>
 
 		<div class="VEContainer">
