--- a/storyCreator/test.html
+++ b/storyCreator/test.html
@@ -35,11 +35,11 @@
   					<script defer="defer">
   					var stage = new Kinetic.Stage({
 			        container: 'tabs-1',
-			        width: 578,
+			        width: 800,
 			        height: 200
 			      });
 
-			      var layer = new Kinetic.Layer();
+			      var layer2 = new Kinetic.Layer();
 			      var imageObj = new Image();
 					imageObj.onload = function() {
 					  var image = new Kinetic.Image({
@@ -47,11 +47,9 @@
 					    y: 50,
 					    image: imageObj,
 					    width: 100,
-					    height: 100
+					    height: 100,
+					    draggable: true
 					  });
-					};
-					imageObj.src = 'kitten.png';
-
 			      var rect = new Kinetic.Rect({
 			        x: 239,
 			        y: 75,
@@ -59,28 +57,26 @@
 			        height: 50,
 			        fill: 'green',
 			        stroke: 'black',
-			        strokeWidth: 4
-			      });
-
-			      var group = new Kinetic.Group({
-			      	draggable: true,
-			      	listening: true,
-			      	name: "box"
+			        strokeWidth: 4,
+			        draggable:true
 			      });
 
 			      // add the shape to the layer
-			      group.add(imageObj);
-			      group.add(rect);
-			      layer.add(group);
-
+			      layer2.add(image);
+			      layer2.add(rect);
 			      // add the layer to the stage
-			      stage.add(layer);
+			      stage.add(layer2);
+			  };
+			   imageObj.src = 'kitten.png';
+
   			</script>
   		<div id="tabs-2">
     		<p>Methods</p>
   		</div>
 
   	</div>
+
+
 
   	</div>
 		</div>
