--- a/storyCreator/test.html
+++ b/storyCreator/test.html
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+		<div id="logo">
+			<img src="EdithLogoName.png" width=50% height=50% >
+		</div>
 		<div class="animationContainer">
 			<canvas id="mainCanvas" width="800"height="400"></canvas>
 		</div>
