small changes to size

--- a/storyCreator/test.html
+++ b/storyCreator/test.html
@@ -161,7 +161,7 @@
 	objectCanvas.width = (window.innerWidth / 1.8);
 	objectCanvas.height = (window.innerHeight / 2.8);
 	VECanvas.width = (window.innerWidth / 2.4);
-	VECanvas.height = (window.innerHeight / 1.08);
+	VECanvas.height = (window.innerHeight);
 
 	var oCanvasElement = wrapHTMLCanvasToOcanvas(document.getElementById("mainCanvas"), '#FFFFFF');  //get the OCanvas so we can animate
 
