adds doublejump animation block

--- a/AnimationIntegration2/caller.html
+++ b/AnimationIntegration2/caller.html
@@ -15,7 +15,7 @@
 	{
 		// movR(mario, 2000, 500);
 		// movL(mario, 200, 500);
-		jump(mario, 200, 100);
+		doubleJump(mario, 200, 100);
 		// jump(luigi, 200, 150);
 		// jump(bowser, 200, 200);
 
