Tests object deletion

--- a/visual_editor.html
+++ b/visual_editor.html
@@ -244,6 +244,9 @@
             }
           }
         }
+      } else {
+        groupToolbox.remove();
+        layer.draw();
       }
           //console.log("id: "+id);
           //console.log("clone id: "+clone.getId());
