--- a/visualEditorTest.html
+++ b/visualEditorTest.html
@@ -15,7 +15,7 @@
   <script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.7.2.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script defer>
-  var UNIVERSAL_MAIN = " ";
+  var UNIVERSAL_MAIN = "";
   /* Prompts user input of names*/
   function promptUser(ids) {
     /*global prompt*/
@@ -24,13 +24,13 @@
       var mname = prompt("Please enter the name of your method", "test");
       var params = prompt("Please enter the Parameters for your method separated by commas");
       x = "function " + mname + "(" + params + ") {";
-      console.log(x);
+      //console.log(x);
       return x;
     }
     if (ids === "variable") {
       var varn = prompt("Please enter the name of your variable", "test");
       x = "var " + varn +  ";";
-      console.log(x);
+      //console.log(x);
       return x;
     }
     if (ids === "end method") {
@@ -41,7 +41,7 @@
       var sprite = prompt("Please enter the name of your sprite", "");
       var mills = prompt("Seconds Delayed");
       x = "setDelay("+sprite+ ","+mills+");";
-      console.log(x);
+      //console.log(x);
       return x;
       }
     if (ids === "fmove") {
@@ -51,8 +51,8 @@
       var height = prompt("height");
       var rotateClockwise = prompt("rotateClockwise");
       var degrees = prompt("degrees");
-      x = "setDelay("+sprite+ ","+dur+ ","+dist+ ","+height+ ","+rotateClockwise+ ","+degrees+");";
-      console.log(x);
+      x = "fmove("+sprite+ ","+dur+ ","+dist+ ","+height+ ","+rotateClockwise+ ","+degrees+");";
+      //console.log(x);
       return x;
       }
     if (ids === "rotate") {
@@ -61,7 +61,7 @@
       var angle = prompt("angle");
       var clockwise = prompt("clockwise");
       x = "rotate("+sprite+ ","+dur+ ","+angle+ ","+height+ ","+clockwise+");";
-      console.log(x);
+      //console.log(x);
       return x;
       }
     if (ids === "jump") {
@@ -69,7 +69,7 @@
       var dur = prompt("dur");
       var height = prompt("height");
       x = "jump("+sprite+ ","+dur+ ","+height+");";
-      console.log(x);
+      //console.log(x);
       return x;
       }
     if (ids === "movL") {
@@ -77,15 +77,15 @@
       var dur = prompt("dur");
       var distance = prompt("distance");
       x = "movL("+sprite+ ","+dur+ ","+distance+");";
-      console.log(x);
+      //console.log(x);
       return x;
       }
     if (ids === "movR") {
       var sprite = prompt("sprite");
       var dur = prompt("dur");
       var distance = prompt("distance");
-      x = "movLR("+sprite+ ","+dur+ ","+distance+");";
-      console.log(x);
+      x = "movR("+sprite+ ","+dur+ ","+distance+");";
+      //console.log(x);
       return x;
 
       }
@@ -93,8 +93,8 @@
       var sprite = prompt("sprite");
       var dur = prompt("dur");
       var distance = prompt("distance");
-      x = "movD("+sprite+ ","+dur+ ","+distance+");";
-      console.log(x);
+      x = "movU("+sprite+ ","+dur+ ","+distance+");";
+      //console.log(x);
       return x;
 
       }
@@ -103,7 +103,7 @@
       var dur = prompt("dur");
       var distance = prompt("distance");
       x = "movD("+sprite+ ","+dur+ ","+distance+");";
-      console.log(x);
+      //console.log(x);
       return x;
       }
   }
@@ -132,7 +132,7 @@
 
     var tools = [{'title': 'method', 'jstext': ''},
         {'title': 'variable', 'jstext': ''},
-        {'title': 'end method', 'jstext': '}'},
+        {'title': 'end method', 'jstext': ''},
         {'title': 'setDelay', 'jstext': ''},
         {'title': 'rotate', 'jstext': ''},
         {'title': 'fmove', 'jstext': ''},
@@ -151,7 +151,8 @@
         id: id,
         draggable: true,
         listening: true,
-		name: "box"
+		name: "box",
+		jsText: ""
       });
       var rect = new Kinetic.Rect({
         x: startX,
@@ -160,6 +161,7 @@
         height: 50,
         fill: '#00D2FF',
         stroke: 'black',
+        name: 'thistest',
         strokeWidth: 2,
         offset: 10
       });
@@ -175,8 +177,8 @@
       });
 
       //have the rectangles save its orginal XY
-      rect.orginalX = x;
-      rect.orginalY = y;
+      //rect.orginalX = x;
+      //rect.orginalY = y;
       //on dragend, calc the rect has passed the threshold
       group.on("dragend", function () {
         var i;
@@ -187,26 +189,36 @@
           var id = this.attrs.id;
           var groupArray = (this.getChildren()).toArray();
           var text = groupArray[1];
+          if(this.getName()=== "sortable"){
+          	
+          	//var y = this.getY();
+          	console.log(this.getY());
+          	//var groupY = groupArray[0].setY(y);
+          	//console.log(groupArray[0].getY());
+          }
           //Only change text, or write to console on first time being dragged over
           if (text.isListening()) {
-            this.setName("sortable");
-            console.log(this.getName());
-            text.setText(promptUser(id));
+            this.setName("sortable");//sets the selected group to be sorted in the sorted function
+            var jsText = promptUser(id);// prompts the user to get attributes
+            this.setAttr('jsText',jsText);// sets the input from above and gives it to the group that is selected
+            text.setText(jsText); // sets the text on group
+            console.log(this.getAttr('jsText')); // double check
             var currentRect = groupArray[0];
             var height = currentRect.getHeight();
             currentRect.setSize(text.getWidth() + 30, height);
             text.setListening(false);
             //In this example, I loop through our list again and see what javascript is associated with our whichever tool was dragged over.
+/*
             for (i = 0; i < tools.length; i++) {
               if (id === tools[i].title) {
                 if (tools[i].jstext !== '') {
-                  console.log(tools[i].jstext);
+                  //console.log(tools[i].jstext);
                   //UNIVERSAL_MAIN = UNIVERSAL_MAIN + tools[i].jstext;
-                  //console.log(UNIVERSAL_MAIN);
 
                 }
               }
             }
+*/
           }
           // END THAT
         }
@@ -226,9 +238,7 @@
 
 
 </script>
-<script src="sortable.js">
-
-</script>
+<script src="sortable.js"></script>
 <p id="demo">Click the button to sort the array.</p>
     <button onclick="sorter()">SORTER</button>
 </body>
