--- a/visual_editor.html
+++ b/visual_editor.html
@@ -22,7 +22,6 @@
   var itemSpacer = 5;
   var snapStructure = [];
   var groupToolbox;
- 
   //declaration of variables
   var i;
   var startX = 20;
@@ -67,70 +66,71 @@
     }
     if (ids === "setDelay") {
       var sprite = prompt("Please enter the name of your sprite", "");
-      var mills = prompt("Seconds Delayed");
-      x = "setDelay("+sprite+ ","+mills+");";
+      var mills = prompt("Seconds Delayed (in milliseconds)");
+      x = "setDelay(" + sprite + ", " + mills + ");";
       console.log(x);
       return x;
-      }
+    }
     if (ids === "fmove") {
       var sprite = prompt("Please enter the name of your sprite");
-      var dur = prompt("Duration of move");
+      var dur = prompt("Duration (in milliseconds)");
       var dist = prompt("Distance");
-      var height = prompt("height");
-      var rotateClockwise = prompt("rotateClockwise");
-      var degrees = prompt("degrees");
-      x = "setDelay("+sprite+ ","+dur+ ","+dist+ ","+height+ ","+rotateClockwise+ ","+degrees+");";
+      var height = prompt("Height");
+      var rotateClockwise = prompt("Clockwise? (true or false)");
+      var degrees = prompt("Degrees");
+      x = "fmove (" + sprite + ", " + dur + ", " + dist + ", " + height + ", " + rotateClockwise + ", " + degrees + ");";
       console.log(x);
       return x;
-      }
+    }
     if (ids === "rotate") {
-      var sprite = prompt("sprite");
-      var dur = prompt("dur");
-      var angle = prompt("angle");
-      var clockwise = prompt("clockwise");
-      x = "rotate("+sprite+ ","+dur+ ","+angle+ ","+height+ ","+clockwise+");";
+      var sprite = prompt("Please enter the name of your sprite");
+      var dur = prompt("Duration (in milliseconds)");
+      var angle = prompt("Angle");
+      var height = prompt("Height")
+      var clockwise = prompt("Clockwise? (true or false)");
+      x = "rotate (" + sprite + ", " + dur + ", " + angle + ", "+height+ ", "+clockwise+");";
       console.log(x);
       return x;
     }
     if (ids === "jump") {
-      var sprite = prompt("sprite");
-      var dur = prompt("dur");
-      var height = prompt("height");
-      x = "jump("+sprite+ ","+dur+ ","+height+");";
+      var sprite = prompt("Please enter the name of your sprite");
+      var dur = prompt("Duration (in milliseconds)");
+      var height = prompt("Height");
+      x = "jump ("+sprite+ ", "+dur+ ", "+height+");";
       console.log(x);
       return x;
-      }
+    }
     if (ids === "movL") {
-      var sprite = prompt("sprite");
-      var dur = prompt("dur");
-      var distance = prompt("distance");
-      x = "movL("+sprite+ ","+dur+ ","+distance+");";
+      var sprite = prompt("Please enter the name of your sprite");
+      var dur = prompt("Duration (in milliseconds)");
+      var distance = prompt("Distance");
+      x = "movL ("+sprite+ ", "+dur+ ", "+distance+");";
       console.log(x);
       return x;
-      }
+    }
     if (ids === "movR") {
-      var sprite = prompt("sprite");
-      var dur = prompt("dur");
-      var distance = prompt("distance");
-      x = "movLR("+sprite+ ","+dur+ ","+distance+");";
+      var sprite = prompt("Please enter the name of your sprite");
+      var dur = prompt("Duration (in milliseconds)");
+      var distance = prompt("Distance");
+      x = "movLR ("+sprite+ ", "+dur+ ", "+distance+");";
       console.log(x);
       return x;
 
       }
    if (ids === "movU") {
-      var sprite = prompt("sprite");
-      var dur = prompt("dur");
-      var distance = prompt("distance");
-      x = "movD("+sprite+ ","+dur+ ","+distance+");";
+      var sprite = prompt("Please enter the name of your sprite");
+      var dur = prompt("Duration (in milliseconds)");
+      var distance = prompt("Distance");
+      x = "movU ("+sprite+ ", "+dur+ ", "+distance+");";
       console.log(x);
       return x;
 
       }
    if (ids === "movD") {
-      var sprite = prompt("sprite");
-      var dur = prompt("dur");
-      var distance = prompt("distance");
-      x = "movD("+sprite+ ","+dur+ ","+distance+");";
+      var sprite = prompt("Please enter the name of your sprite");
+      var dur = prompt("Duration (in milliseconds)");
+      var distance = prompt("Distance");
+      x = "movD ("+sprite+ ", "+dur+ ", "+distance+");";
       console.log(x);
       return x;
   	}
@@ -194,7 +194,6 @@
       groupArray = (this.getChildren()).toArray();
       text = groupArray[1];
       currentRect = groupArray[0];
-      console.log(currentRect.getX() + ", " + currentRect.getY());
       clone = newRect(currentRect.getX(), currentRect.getY(), id); //create a "clone" of this rectangle
       layer.draw();
     });
