--- a/visual_editor.html
+++ b/visual_editor.html
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-  <p id="demo"></p>
+  <p style='font-family: Helvetica; margin-left: 20px; font-size: 36px; font-weight: bold;'>Visual editor <span style='font-size: 10px'>version: 0.8.8-alpha</span></p>
   <div id="container"></div>
   <script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.7.2.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
