extends pane size

--- a/visual_editor.html
+++ b/visual_editor.html
@@ -161,7 +161,7 @@
     var stage = new Kinetic.Stage({
       container: 'container',
       width: 800,
-      height: 800
+      height: 1000
     });
     layer = new Kinetic.Layer();
     stage.add(layer);
@@ -169,7 +169,7 @@
 		var line = new Kinetic.Line({
 			x: 400,
 			y: 0,
-			points: [0, 0, 0, 800],
+			points: [0, 0, 0, 1000],
 			stroke: 'red'
 		});
 		
@@ -334,8 +334,8 @@
   </script>
 
   <script src="sortable.js"></script>
-  <p id="demo">Click the button to sort the array.</p>
+  <!--<p id="demo">Click the button to sort the array.</p>
     <button onclick="sorter()">SORTER</button>
-  </body>
+  </body> -->
 
 </html>
