Removes unnecessary console.logs

--- a/visual_editor.html
+++ b/visual_editor.html
@@ -73,7 +73,7 @@
       var sprite = prompt("Please enter the name of your sprite", "");
       var mills = prompt("Seconds Delayed (in milliseconds)");
       x = "setDelay(" + sprite + ", " + mills + ");";
-      console.log(x);
+      //console.log(x);
       return x;
     }
     if (ids === "fmove") {
@@ -153,7 +153,6 @@
       x = "else{";
       return x;
     }
-  console.log(UNIVERSAL_MAIN);
   }
   
   $(function () {
@@ -286,7 +285,7 @@
       text = groupArray[1];
 
       currentRect = groupArray[0];
-      console.log(this.getY() + currentRect.getY()); // double check
+      //console.log(this.getY() + currentRect.getY()); // double check
 
 
       //BELOW DO WHAT YOU DO WHEN SOMETHING GETS DRAGGED OVER the line
