More pretty things oh god i hope i didnt break anything

--- a/storyCreator/test.html
+++ b/storyCreator/test.html
@@ -161,9 +161,11 @@
 	mainCanvas.width = (window.innerWidth / 1.8);
 	mainCanvas.height = (window.innerHeight / 1.8);
 	objectCanvas.width = (window.innerWidth / 1.8);
-	objectCanvas.height = (window.innerHeight / 2.8);
+	objectCanvas.height = (window.innerHeight / 2.9);
+	//objectCanvas.width = 800;
+	//objectCanvas.height = 200;
 	VECanvas.width = (window.innerWidth / 2.4);
-	VECanvas.height = (window.innerHeight / 1.08);
+	// VECanvas.height = (window.innerHeight / 1.05);
 
 	var oCanvasElement = wrapHTMLCanvasToOcanvas(document.getElementById("mainCanvas"), '#FFFFFF');  //get the OCanvas so we can animate
 
