--- a/story_integration2/test.html
+++ b/story_integration2/test.html
@@ -12,6 +12,8 @@
 
 	<script src = 'object_creator/jfile.js' type = 'text/javascript' ></script>
 	<script src='Animation/animationBlocks.js' type = 'text/javascript' ></script>
+	
+	<script src= 'dataRequests.js' type = 'text/javascript'></script>
 
 	<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 	<script src="gui.js"> </script>
@@ -159,9 +161,11 @@
 	mainCanvas.width = (window.innerWidth / 1.8);
 	mainCanvas.height = (window.innerHeight / 1.8);
 	objectCanvas.width = (window.innerWidth / 1.8);
-	objectCanvas.height = (window.innerHeight / 2.8);
+	objectCanvas.height = (window.innerHeight / 2.9);
+	//objectCanvas.width = 800;
+	//objectCanvas.height = 200;
 	VECanvas.width = (window.innerWidth / 2.4);
-	VECanvas.height = (window.innerHeight / 1.08);
+	// VECanvas.height = (window.innerHeight / 1.05);
 
 	var oCanvasElement = wrapHTMLCanvasToOcanvas(document.getElementById("mainCanvas"), '#FFFFFF');  //get the OCanvas so we can animate
 
@@ -221,7 +225,8 @@
 <div class="buttons">
  <button id="button1" onclick = 'play()'>Play</button>
  <button id="button2" onclick = 'pauseAll()'>Pause</button>
- <button id="button5" onclick = 'popitup("object_creator/example.html")'>Make Object</button>
+ <button id="button3" onclick = 'popitup("object_creator/example.html")'>Make Object</button>
+ <button id="button4" onClick = 'save("objectName")'>Save</button>
 </div>
 
 </body>
