--- a/storyCreator/test.html
+++ b/storyCreator/test.html
@@ -40,8 +40,8 @@
   					<script defer="defer">
   					var stage = new Kinetic.Stage({
 			        container: 'tabs-1',
-			        width: 800,
-			        height: 200
+			        width: 780;
+			        height: 200;
 			      });
 
 			      var layer2 = new Kinetic.Layer();
@@ -160,7 +160,7 @@
 <script>
 	mainCanvas.width = (window.innerWidth / 1.8);
 	mainCanvas.height = (window.innerHeight / 1.8);
-	objectCanvas.width = (window.innerWidth / 1.8);
+	objectCanvas.width = (window.innerWidth / 11.9);
 	objectCanvas.height = (window.innerHeight / 2.9);
 	VECanvas.width = (window.innerWidth / 2.4);
 	VECanvas.height = (window.innerHeight / 1.05);
